<resources>
    <string name="app_name">DoctorApp</string>

    <string name="facebook_app_id">294643917886665</string>
    <string name="fb_login_protocol_scheme">fb294643917886665</string>

    <string name="doctor">DOCTOR</string>
    <string name="find_doctor">Find expert doctors for particular problem in one tap</string>
    <string name="medicine">Medicine</string>
    <string name="medicine_types">Alopathic, Ayurvedic, and alll types of medicines can be bought here</string>
    <string name="appointment">Appointments</string>
    <string name="book_appointment">Book appointments and get best treatments in one tap</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_hint">Enter name</string>
    <string name="emaiil">E-mail</string>
    <string name="mobile">Mobile Number</string>
    <string name="password">Password</string>
    <string name="password_hint">Password (min 8 chars)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_link_text">We just need your registered email ID to send reset link</string>
    <string name="reset_password">Reset Password</string>
    <string name="birthday">Your Birthday</string>
    <string name="next">Next</string>
    <string name="max_date">12/30/3000</string>
    <string name="min_date">12/30/2000</string>
    <string name="sign_in">Sign In</string>
    <string name="remember">Remember</string>
    <string name="or">Or</string>
    <string name="dont_have_account">Dont Have Account?</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="options">Options</string>
    <string name="profile">Profile</string>
    <string name="cart">Add to cart</string>
    <string name="find_doctors">Find Doctor</string>
    <string name="doctriod">Doctriod</string>
    <string name="medicine_shop">Medicine Shop</string>
    <string name="first_aid">First Aid</string>
    <string name="emergency">Emergency</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="search">Search</string>
    <string name="vivek_kumar">Dr. Vivek Thakur</string>
    <string name="peditrician">Peditrician</string>
    <string name="hospital_name">Dishant Hospital, Ring road, Nagpur</string>
    <string name="distance">7.5 km</string>
    <string name="rating">4.5</string>
    <string name="sample_date">02- November- 2017</string>
    <string name="sample_time">11 AM to 1 PM</string>
    <string name="services">Services</string>
    <string name="weekly_checkup">Weekly Checkup</string>
    <string name="dollar_50">$50</string>
    <string name="mins_35">35 mins</string>
    <string name="total">Total</string>
    <string name="total_amount">$ 200</string>
    <string name="age">Age</string>
    <string name="years_24">24 \n years</string>
    <string name="blood">Blood</string>
    <string name="ab">AB</string>
    <string name="male">Male</string>
    <string name="goal">Goal</string>
    <string name="percent87">87%</string>
    <string name="jitu">Jitu Nepal</string>
    <string name="insurance">JLR insurance</string>
    <string name="full_name">Full Name</string>
    <string name="appointment_book">Book Appointment</string>
    <string name="review_number">(789 Review)</string>
    <string name="qualify">(BAMS, MBBS)</string>
    <string name="photos">Photos</string>
    <string name="call">Call</string>
    <string name="sign_up_using_fb">Sign up Using Facebook</string>
    <string name="sign_up_with_email_phone">Sign Up with Email Address or Phone Number</string>

    <string-array name="doctor_list">
        <item>Specialist Doctor</item>
        <item>Doctor1</item>
        <item>Doctor2</item>
        <item>Doctor3</item>
    </string-array>

    <string-array name="location_list">
        <item>Nepal</item>
        <item>Kathmandu</item>
        <item>Jhapa</item>
        <item>Butwal</item>
    </string-array>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_after_login">AfterLoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="log_out">Log out</string>
    <string name="user">User</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blood_group">Blood Group</string>
    <string name="update">Update</string>
    <string name="choose_appointment_date">Choose appoinment date</string>
    <string name="choose_appointment_time">Choose appoinment time</string>
    <string name="fee">General one time check up fee:</string>
    <string name="my_appointments">My Appointments</string>
    <string name="medicine_prescription">Medicines prescribed by</string>
    <string name="submit">Submit</string>
    <string name="my_medicine">My Medicines</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Enter your current password</string>
    <string name="new_password">Enter new password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="save_changes">Save changes</string>
    <string name="upload_image_name">Enter name of the image</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_image">Upload Image</string>

</resources>
