<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/my_appointments" />

        <item
            android:id="@+id/nav_my_photos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/photos"
            />
    </group>

    <item android:title="@string/account_settings">
        <menu>
            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/call_icon"
                android:title="@string/change_password"/>

            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out" />

        </menu>
    </item>

</menu>
