<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/base_layout_style">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/title_style"
        android:text="@string/change_password"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edit_text_style"
        android:hint="@string/old_password"
        android:inputType="textVisiblePassword"
        />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edit_text_style"
        android:hint="@string/new_password"
        android:inputType="textVisiblePassword"
        />

    <EditText
        android:id="@+id/et_retype_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edit_text_style"
        android:hint="@string/re_enter_new_password"
        android:inputType="textVisiblePassword"
        />

    <Button
        android:id="@+id/btn_change_password_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:text="@string/save_changes"
        />

</LinearLayout>
