<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/top_margin_50"
    android:paddingLeft="@dimen/margin_20"
    android:paddingRight="@dimen/margin_20"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        style="@style/title_style"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_link_text"
        android:textColor="@color/grey"
        />

    <EditText
        android:id="@+id/et_forgot_password_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        style="@style/edit_text_style"
        android:hint="@string/emaiil"/>

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:text="@string/reset_password"/>
</LinearLayout>
