<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/top_margin_50"
        android:layout_marginRight="@dimen/margin_20"
        android:background="@color/white"
        android:paddingLeft="@dimen/margin_20"
        android:paddingTop="@dimen/top_margin_50"
        android:paddingRight="@dimen/margin_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_profile_name"
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/jitu" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/grey"
            android:showDividers="middle">

            <TableRow
                android:divider="@color/grey"
                android:dividerPadding="0dp"
                android:paddingBottom="@dimen/margin_20"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/age"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_text_size" />

                    <TextView
                        android:id="@+id/tv_age_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/years_24" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/blood"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_text_size" />

                    <TextView
                        android:id="@+id/tv_blood_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ab" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/gender"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_text_size" />

                    <TextView
                        android:id="@+id/tv_gender_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:divider="@color/grey"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/height"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_text_size" />

                    <TextView
                        android:id="@+id/tv_height_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/years_24" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/weight"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_text_size" />

                    <TextView
                        android:id="@+id/tv_weight_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ab" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/goal"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percent87" />

                </LinearLayout>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:text="@string/edit_profile"/>

        <!--<Spinner-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="@dimen/margin_20"-->
            <!--android:background="@drawable/spinner_background"-->
            <!--android:entries="@array/doctor_list"-->
            <!--android:padding="@dimen/all_padding" />-->

        <!--<Spinner-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="@dimen/margin_20"-->
            <!--android:background="@drawable/spinner_background"-->
            <!--android:entries="@array/location_list"-->
            <!--android:padding="@dimen/all_padding" />-->

        <!--<Spinner-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="@dimen/margin_20"-->
            <!--android:background="@drawable/spinner_background"-->
            <!--android:entries="@array/gender_list"-->
            <!--android:padding="@dimen/all_padding" />-->

    </LinearLayout>
    </ScrollView>

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/iv_profile_image"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hugh"
        app:civ_border_color="@color/color_transparent"
        app:civ_border_width="2dp" />

</RelativeLayout>
