<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/base_layout_style">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        style="@style/title_style"/>

    <!--<android.support.design.widget.TextInputEditText-->
        <!--android:id="@+id/et_email_sign_in"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--style="@style/edit_text_style"-->
        <!--android:inputType="textEmailAddress"-->
        <!--android:hint="@string/emaiil"-->

        <!--/>-->

        <EditText
            android:id="@+id/et_email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_style"
            android:inputType="textEmailAddress"
            android:hint="@string/emaiil"
            />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/edit_text_style"
            android:hint="@string/password"
        />
    </android.support.design.widget.TextInputLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!--android:layout_marginTop="@dimen/margin_20">-->

    <TextView
        android:id="@+id/tv_sign_in_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginTop="@dimen/all_padding"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/forgot_password"/>

    <!--<RadioButton-->
    <!--android:id="@+id/rb_remember_sign_in"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_weight="1"-->
    <!--android:layout_height="match_parent"-->
    <!--android:checked="true"-->
    <!--android:text="@string/remember"/>-->


    <!--</LinearLayout>-->

    <Button
        android:id="@+id/btn_manual_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        style="@style/button_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="@dimen/margin_20">

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/stroke_width"
            android:background="@color/grey"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:paddingHorizontal="@dimen/all_padding"
            android:textSize="@dimen/normal_text_size"
            />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/stroke_width"
            android:background="@color/grey"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_sign_in_fb"
        android:clickable="true"
        android:background="@drawable/grey_border_background"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/facebook_icon"/>

            <!--<ImageView-->
                <!--android:layout_width="30dp"-->
                <!--android:layout_height="30dp"-->
                <!--android:src="@drawable/google_plus_icon"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:layout_marginBottom="@dimen/margin_20"
        android:paddingBottom="@dimen/margin_20"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textSize="@dimen/normal_text_size"
            />

        <TextView
            android:id="@+id/tv_sign_in_create_account"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/normal_text_size"
            />

    </LinearLayout>

</LinearLayout>
