<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/base_layout_style">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp">

        <Button
            android:id="@+id/btn_sign_up_options_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:text="@string/sign_up_using_fb"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="@dimen/all_padding">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/stroke_width"
                android:background="@color/grey"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:paddingHorizontal="@dimen/all_padding"
                android:textSize="@dimen/title_text_size"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/stroke_width"
                android:background="@color/grey"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_sign_up_options_email_phone"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/sign_up_with_email_phone"
            />

    </LinearLayout>

</LinearLayout>
